# connect4

./: Cargo.toml  commands.txt  index.html  styles.css  tailwind.config.js
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
src/: components.rs  connect4.rs  game.rs  main.rs
src/components/: app.rs  board.rs  bot.rs  connect4.rs  game_types.rs  lib.rs  rules.rs  toototto.rs  zack.rs
src/unused/: connect4.rs  toototto.rs  toototto_terminal.rs  toottest.rs
