[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
rand = "0.8.5"
getrandom = { version = "0.2.14", features = ["js"] }
log = "0.4"
web-sys = "0.3"